[PlayStation] Miscellaneous build fixes February 2020 edition https://bugs.webkit.org/show_bug.cgi?id=207312

Unreviewed build fix.


Source/WebCore:

* accessibility/AccessibilityObject.h: Add missing definition for !ENABLE(ACCESSIBILITY)
(WebCore::AccessibilityObject::detachPlatformWrapper):
* layout/blockformatting/BlockFormattingContextGeometry.cpp:
* platform/graphics/cairo/ImageBufferCairo.cpp: Add missing include

Source/WebKit:

* NetworkProcess/NetworkDataTaskBlob.cpp: Add missing include.
* UIProcess/Downloads/DownloadProxyMap.h: Add missing forward declaration.

Tools:

* TestWebKitAPI/PlatformWebView.h: Remove #elif guard and just use #else


Canonical link: https://commits.webkit.org/220309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255899 268f45cc-cd09-0410-ab3c-d52691b4dbfc